Primeiros ajustes do html e inclusão do css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto Site</title>
 </head>
 <body>
-    <h1>Alan Reis</h1>
-    <h2>Estudante de Front-end</h2>
+
+    <div class="container">
+        <!--barra de navegação-->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Projetos</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+
+        <!-- Header -->
+        <header>
+            <!-- Imagem -->
+            <div class="img-wrapper">
+                <img src="imagens/bg.jpg" alt="">
+            </div>
+            <div class="banner">
+                <!-- Título -->
+                <h1> &lt; Web Developer Front End &gt; </h1>
+                <p>&lt; Alan Reis &gt;</p>
+                <button>Saiba mais</button>    
+            </div>
+
+        </header>
+    </div>
 </body>
 </html>
