--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <div class="container">
         <!--barra de navegação-->
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Projetos</li>
-                <li>Contato</li>
+        <nav class="navbar">
+            <ul class="navlist">
+                <li><a href="">Home</a></li>
+                <li><a href="">Projetos</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </nav>
 
