--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <div class="banner">
                 <!-- Título -->
-                <h1> &lt; Web Developer Front End &gt; </h1>
-                <p>&lt; Alan Reis &gt;</p>
+                <h1>Web Developer Front End</h1>
+                <p>Alan Reis</p>
                 <button>Saiba mais</button>    
             </div>
 
