:package:Novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8e2aff5c79.js" crossorigin="anonymous"></script>
     <title>Projeto Site</title>
 </head>
 <body>
@@ -18,6 +19,12 @@
                 <li><a href="">Contato</a></li>
             </ul>
         </nav>
+        <!--menu hamburguer-->
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+        </div>
 
         <!-- Header -->
         <header>
@@ -33,6 +40,25 @@
             </div>
 
         </header>
+        <!--Fim de Header-->
+
+        <!--Sidebar-->
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Outro</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-twitch"></i></a>
+            </div>
+        </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
