--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 
         <!--Sidebar-->
         <div class="sidebar">
+            <div class="sideheader"> <nav>
+                <ul>
+                    <li class="headeri"><a class="hlink" href="">Alan Reis</a></li>
+                </ul>
+            </nav> </div>
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
