--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 <body>
 
     <div class="container">
+    <div class="nav-cont">
         <!--barra de navegação-->
+        <a href="" class="logo">Alan Reis</a>
         <nav class="navbar">
             <ul class="navlist">
                 <li><a href="">Home</a></li>
                 <li><a href="">Projetos</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
-        </nav>
+        </nav> 
+    </div>
+
         <!--menu hamburguer-->
         <div class="hamburguer">
             <div class="line" id="line1"></div>
@@ -43,12 +47,12 @@
         <!--Fim de Header-->
 
         <!--Sidebar-->
-        <div class="sidebar">
+        <aside class="sidebar">
             <div class="sideheader"> <nav>
                 <ul>
                     <li class="headeri"><a class="hlink" href="">Alan Reis</a></li>
                 </ul>
-            </nav> </div>
+            </nav></div>
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -62,7 +66,7 @@
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-twitch"></i></a>
             </div>
-        </div>
+        </aside>
     </div>
 </body>
 <script src="script.js"></script>
