--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <ul class="navlist">
                 <li><a href="">Home</a></li>
                 <li><a href="">Projetos</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="">Conhecimentos</a></li>
+                <li><a href="">Sobre</a></li>
+               
             </ul>
         </nav> 
     </div>
@@ -58,8 +60,8 @@
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Sobre</a></li>
                     <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Outro</a></li>
                 </ul>
             </nav>
             <div class="social-media">
@@ -67,6 +69,70 @@
                 <a href="#"><i class="fab fa-twitch"></i></a>
             </div>
         </aside>
+
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni accusamus consequuntur iusto placeat eligendi porro. Praesentium architecto quae ad, iure vitae ratione, eius culpa placeat doloremque non aut illo adipisci.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque excepturi omnis ab voluptatum facilis pariatur repellendus eum suscipit hic illo ratione sunt, accusantium exercitationem, iste vitae nobis adipisci ipsum. Maiores.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic assumenda quis veniam in, asperiores nam eaque vel molestias cumque ratione laboriosam illum doloribus sint pariatur enim eveniet corrupti nostrum rerum.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ex illum quasi delectus placeat maiores? Deserunt beatae voluptate adipisci voluptates asperiores maiores non dolorem rem ullam corrupti, commodi facilis iure.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab"></i>
+                        <h3>Outro</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, culpa. Error pariatur ipsum architecto tempora, excepturi sit alias exercitationem reprehenderit ducimus eius voluptatem, natus inventore quisquam dolor voluptatibus, quos quam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab"></i>
+                        <h3>Outro</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, atque ipsam. Veniam nostrum eaque, facere cumque dolore earum nihil animi fugit voluptatem ipsa, repudiandae officiis dolor modi sint tempore sequi.</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="imagens/conhecimento-2.png" alt="Imagem ilustrando conhecimentos"></div>
+            </div>
+        </section>
     </div>
 </body>
 <script src="script.js"></script>
